--- a/templates/list.html
+++ b/templates/list.html
@@ -471,10 +471,10 @@
         </p>
         <nav>
             <div id="buttons">
-                <a href="#" id="btn_target_feature" class="btn-gradient cyan mini"><i class="fas fa-tools"></i> not showing unused dependencies</a>
+                <a href="#" id="btn_target_feature" class="btn-gradient orange mini"><i class="fas fa-tools"></i> not showing unused dependencies</a>
                 <a href="#" id="btn_total_loc" class="btn-gradient orange mini"><i class="fas fa-align-center"></i> showing lines of code for transitive dependencies</a>
-                <a href="#" id="btn_transitive_deps" class="btn-gradient green mini"><i class="fas fa-plus"></i> not showing transitive dependencies</a>
-                <a href="#" id="btn_internal_deps" class="btn-gradient purple mini"><i class="fab fa-font-awesome-flag"></i> not showing internal dependencies</a>
+                <a href="#" id="btn_transitive_deps" class="btn-gradient orange mini"><i class="fas fa-plus"></i> not showing transitive dependencies</a>
+                <a href="#" id="btn_internal_deps" class="btn-gradient orange mini"><i class="fab fa-font-awesome-flag"></i> not showing internal dependencies</a>
 <!--                <a href="#">not marking exclusive dependencies</a> -->
             </div>
             <!-- TODO: change URL with `crumble` when clicking + keep what's sorted in memory -->
@@ -739,6 +739,8 @@
             } else {
                 target.innerHTML = target.innerHTML.replace("showing", "not showing");
             }
+            target.classList.toggle('cyan');
+            target.classList.toggle('orange');
         }
 
         // show/hide dependencies that are not part of our (target, features)
