button color fix

--- a/templates/list.html
+++ b/templates/list.html
@@ -472,7 +472,7 @@
         <nav>
             <div id="buttons">
                 <a href="#" id="btn_target_feature" class="btn-gradient orange mini"><i class="fas fa-tools"></i> not showing unused dependencies</a>
-                <a href="#" id="btn_total_loc" class="btn-gradient orange mini"><i class="fas fa-align-center"></i> showing lines of code for transitive dependencies</a>
+                <a href="#" id="btn_total_loc" class="btn-gradient cyan mini"><i class="fas fa-align-center"></i> showing lines of code for transitive dependencies</a>
                 <a href="#" id="btn_transitive_deps" class="btn-gradient orange mini"><i class="fas fa-plus"></i> not showing transitive dependencies</a>
                 <a href="#" id="btn_internal_deps" class="btn-gradient orange mini"><i class="fab fa-font-awesome-flag"></i> not showing internal dependencies</a>
 <!--                <a href="#">not marking exclusive dependencies</a> -->
