added direct link to contributor page

--- a/templates/list.html
+++ b/templates/list.html
@@ -707,7 +707,7 @@
             }
 
             if (package["active_contributors"]) {
-                html += '<td><a href="'+package["repo"]+'">' + package["active_contributors"] + "</a></td>";
+                html += '<td><a href="'+package["repo"]+'graphs/contributors">' + package["active_contributors"] + "</a></td>";
             } else {
                 html += "<td></td>";
             }
